Comment the error, just trust me!

--- a/src/main/java/WHS_planner/Core/TODO
+++ b/src/main/java/WHS_planner/Core/TODO
@@ -1,1 +1,2 @@
 Use google calendar to share free blocks and allows people to find meetings
+Allow user to allow Gmail access to school email so I can get the whsplannermeeting without needing the user to import it
